# shell-0

./: .gitignore  README.md  example_config.json  manual.py  pyproject.toml  requirements.txt  server.py  stdio_driver.py
tests/: README.md  __init__.py  conftest.py  test_fs.py  test_js_exec.py  test_python_exec.py  test_regression.py  test_server_integration.py  test_terminal.py
tools/: __init__.py  _python_worker.py  filesystem.py  js_runner.py  python_runner.py  terminal_exec.py
